
0.9.8d Apr 25, 2004
 * added alias for --simulate [-s], and --no-prompt [-y]
 * updated pt_BR translation
 * es and es_ES translations

0.9.8c Mar 17, 2004
 * updated dutch translation adding missing newlines
 * makefile updates
 * documentation updates
 * Dutch translation by Michiel H. (myself@mhil.net)
 * updated dep script in FAQ
 * misc code updates
 * doc updates
 * fixed segfault when slapt-getrc isn't present (return value from open() not checked)

0.9.8b Jan 20, 2004
 * documentation updates (FAQ)
 * makefile updates (permissions etc)
 * remove default user/pass combo so that it can be overriden within the
   slapt-getrc in the source url
 * fixed strncpy() call, length now uses MD5_STR_LEN macro
 * added Norwegian translation by Joran Kvalvaag (jk at nerdworks dot org)
 * added notice when dependency is present in excludes
 * don't consult re_install on dependency check (so when reinstalling pacakge a,
   dependencies b,c, and d aren't reinstalled as well)
 * translation updates

0.9.8a Jan 11, 2004
 * translation updates
 * merged --print-uris patch (cynepnynep@chat.ru)
 * initial transfer resume support
 * added md5 sum to pkg_info_t struct
 * added check for conflict string size, preventing overflow
 * updated update_pkg_cache to merge md5sum into package data
   this will speed up md5 lookups since they are now done during --update
 * rewrote get_md5sum()
 * /var/slapt-get/CHECKSUMS.md5 no longer present.
   MD5 sums integrated into /var/slapt-get/package_data
 * update_pkg_cache now queries everything on a server before moving on
   to the next package source.  This helps ensure that duplicate
   packages from multiple sources will be associated with the correct
   md5 checksums, etc.
 * made sure to null terminate strings of package structure elements in
   case assignment isn't made.
 * added check for correct size of package after download, return incomplete
   download instead of continuing and returning a failed md5 checksum